1999-08-21  James Henstridge  <james@daa.com.au>

	* objects/flowchart/ellipse.c: 
	* objects/flowchart/diamond.c: 
	* objects/flowchart/parallelogram.c: 
	* objects/flowchart/box.c: Fixed up a few bugs in these objects when
	copying or loading these object types.  Not all the connection
	points would be initialised correctly.

	* objects/flowchart/Makefile.am (libflowchart_objects_la_LDFLAGS):
	similar here.

	* objects/custom/Makefile.am (libcustom_objects_la_LDFLAGS): do not
	build a versioned library.  It will only ever be dlopen'd, so this
	is not a problem.

	* objects/custom/custom_object.c (custom_distance_from): allow
	selecting the object by clicking on the text.  This fixes problems
	where the text box is outside the graphic.

	* objects/custom/shape_info.c (load_shape_info): fixed up reading
	of connections points.  It should be possible to add connections
	to custom objects now.

	* objects/custom/custom_object.c (custom_update_data): fixed resizing
	due to changes to text.

	* configure.in: added extra makefiles.
	
	* objects/custom/shape_info.[ch]:
	* objects/custom/custom_object.c:
	* objects/custom/custom.c: the starts of custom shape support in dia.
	This is not built by default at the moment, since it is not quite
	complete.  When it is, it will let you create more shapes for dia
	without writing a line of C.  Its implementation includes buzzwords
	such as XML and SVG, so it must be good :)

1999-08-19  Karsten Weiss  <karsten@addx.au.s.shuttle.de>

	* app/app_procs.c (app_exit): Use button labels "Quit" and
	"Cancel" instead of "Yes" and "No".
	Set default action to "Cancel" instead of "Quit".

1999-08-19  James Henstridge  <james@daa.com.au>

	* objects/flowchart/flowchart.c: added ellipse object.
	
	* objects/flowchart/ellipse.c: a new shape for the flowchart toolbox.

1999-08-18  James Henstridge  <james@daa.com.au>d

	* app/color_area.c (color_area_edit): small fix to prevent dia from