@@ -8,7 +8,7 @@
     <point x="1.0" y="2.0"/>
     <point x="2.0" y="1.0"/>
   </connections>
-  <textbox x1="0.0" y1="2.05" x2="3.0" y2="3.05"/>
+  <!-- textbox x1="0.0" y1="2.05" x2="3.0" y2="3.05"/ -->
   <svg:svg width="3.0" height="3.0">
     <svg:rect x1="1.0" y1="1.0" x2="2.0" y2="2.0"/>
     <svg:rect x1="1.2" y1="1.2" x2="1.8" y2="1.8"/>
